--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,12 @@ small_http = { path = "../small_http" }
 smol = "1.2.5"
 thiserror = "1.0"
 
+tinytemplate = "1.2.1"
+serde = { version = "1.0", features = ["derive"] }
+
+ureq = "2"
+serde_json = "1.0.64"
+
 image = "0.23"
 #fontster = { git = "https://github.com/gennyble/fontster", branch = "main" }
 fontster = { path = "../fontster" }
