--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 small_http = { path = "../small_http" }
 smol = "1.2.5"
 thiserror = "1.0"
+confindent = "2.0.1"
+getopts = "0.2"
 
 tinytemplate = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
