--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ smol = "1.2.5"
 thiserror = "1.0"
 confindent = "2.0.1"
 getopts = "0.2"
+chrono = "0.4"
 
 tinytemplate = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
