--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "textualimagery"
 version = "0.1.0"
-authors = ["Brad Alfirevic <brad@genbyte.dev>"]
+authors = ["Genevieve Zenla <gen@nyble.dev>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
