--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-small_http = { path = "../small_http" }
+small_http = { git = "https://github.com/gennyble/small_http", branch = "main" }
 smol = "1.2.5"
 thiserror = "1.0"
 confindent = "2.0.1"
@@ -21,5 +21,4 @@ ureq = "2"
 serde_json = "1.0.64"
 
 image = "0.23"
-#fontster = { git = "https://github.com/gennyble/fontster", branch = "main" }
-fontster = { path = "../fontster" }
+fontster = { git = "https://github.com/gennyble/fontster", branch = "main" }
