Straight port to hyper/tokio; needs refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-small_http = { git = "https://github.com/gennyble/small_http", branch = "main" }
-smol = "1.2.5"
 thiserror = "1.0"
 confindent = "2.0.1"
 getopts = "0.2"
 chrono = "0.4"
-
-tinytemplate = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
 
 ureq = "2"
@@ -22,3 +18,16 @@ serde_json = "1.0.64"
 
 image = "0.23"
 fontster = { git = "https://github.com/gennyble/fontster", branch = "main" }
+
+hyper = { version = "0.14", features = ["full"] }
+bempline = "0.4"
+
+[dependencies.mavourings]
+git = "https://github.com/gennyble/mavourings"
+branch = "main"
+default-features = false
+features = ["cookie", "send_file", "template"]
+
+[dependencies.tokio]
+version = "1"
+features = ["rt-multi-thread", "macros", "fs"]
